Adding auth, but before major refactor.

--- a/TestInBoxRateLimiting/appsettings.json
+++ b/TestInBoxRateLimiting/appsettings.json
@@ -29,7 +29,7 @@
       "TenantId1_ObjectId1": {
         "Type": "UserId",
         "Method": "GET",
-        "Path": "/weatherforecast",
+        "Path": "/weatherforecast/*/resource",
         "Limit": 2,
         "Window": "00:00:10"
       }
