Support multiple paths per policy.

--- a/TestInBoxRateLimiting/appsettings.json
+++ b/TestInBoxRateLimiting/appsettings.json
@@ -14,24 +14,54 @@
     "Policies": {
       "CN=debugger.commercecache.azure-test.net": {
         "Type": "CertificateName",
-        "Method": "GET",
-        "Path": "/weatherforecast",
-        "Limit": 1,
-        "Window": "00:00:10"
+        "Rules": [
+          {
+            "Method": "GET",
+            "Path": "/weatherforecast/*/resource",
+            "Limit": 2,
+            "Window": "00:00:10"
+          },
+          {
+            "Method": "GET",
+            "Path": "/weatherforecast",
+            "Limit": 1,
+            "Window": "00:00:10"
+          }
+        ]
       },
       "Adam": {
         "Type": "AppId",
-        "Method": "GET",
-        "Path": "/weatherforecast",
-        "Limit": 2,
-        "Window": "00:00:10"
+        "Rules": [
+          {
+						"Method": "GET",
+						"Path": "/weatherforecast",
+						"Limit": 1,
+						"Window": "00:00:10"
+					},
+					{
+						"Method": "GET",
+						"Path": "/weatherforecast/*/resource",
+						"Limit": 2,
+						"Window": "00:00:10"
+					}
+        ]
       },
       "TenantId1_ObjectId1": {
         "Type": "UserId",
-        "Method": "GET",
-        "Path": "/weatherforecast/*/resource",
-        "Limit": 2,
-        "Window": "00:00:10"
+        "Rules": [
+          {
+						"Method": "GET",
+						"Path": "/weatherforecast",
+						"Limit": 1,
+						"Window": "00:00:10"
+					},
+					{
+						"Method": "GET",
+						"Path": "/weatherforecast/*/resource",
+						"Limit": 2,
+						"Window": "00:00:10"
+					}
+        ]
       }
     }
   }
