No regex, only hash.

--- a/TestInBoxRateLimiting/appsettings.json
+++ b/TestInBoxRateLimiting/appsettings.json
@@ -8,60 +8,36 @@
   "AllowedHosts": "*",
   "RateLimit": {
     "IsEnabled": true,
-    "EnableQuery1": true,
-    "Query1Window": "00:00:15",
-    "Query1Limit": 3,
     "Policies": {
       "CN=debugger.commercecache.azure-test.net": {
-        "Type": "CertificateName",
-        "Rules": [
-          {
-            "Method": "GET",
-            "Path": "/weatherforecast/*/resource",
-            "Limit": 2,
-            "Window": "00:00:10"
-          },
-          {
-            "Method": "GET",
-            "Path": "/weatherforecast",
-            "Limit": 2,
-            "Window": "00:00:15"
-          }
-        ]
+        "GET_weatherforecast/resource": {
+          "Limit": 2,
+          "Window": "00:00:11"
+        },
+        "GET_weatherforecast": {
+          "Limit": 2,
+          "Window": "00:00:09"
+        }
       },
-      "Adam": {
-        "Type": "AppId",
-        "Rules": [
-          {
-						"Method": "GET",
-						"Path": "/weatherforecast",
-						"Limit": 1,
-						"Window": "00:00:10"
-					},
-					{
-						"Method": "GET",
-						"Path": "/weatherforecast/*/resource",
-						"Limit": 2,
-						"Window": "00:00:10"
-					}
-        ]
+      "AppId=Adam": {
+        "GET_weatherforecast/resource": {
+          "Limit": 2,
+          "Window": "00:00:11"
+        },
+        "GET_weatherforecast": {
+					"Limit": 2,
+					"Window": "00:00:09"
+				}
       },
-      "TenantId1_ObjectId1": {
-        "Type": "UserId",
-        "Rules": [
-          {
-						"Method": "GET",
-						"Path": "/weatherforecast",
-						"Limit": 1,
-						"Window": "00:00:10"
-					},
-					{
-						"Method": "GET",
-						"Path": "/weatherforecast/*/resource",
-						"Limit": 2,
-						"Window": "00:00:10"
-					}
-        ]
+      "UserId=TenantId1_ObjectId1": {
+        "GET_weatherforecast/resource": {
+          "Limit": 2,
+          "Window": "00:00:11"
+        },
+        "GET_weatherforecast": {
+          "Limit": 2,
+          "Window": "00:00:09"
+        }
       }
     }
   }
